Completed documentation to chapter 7

--- a/psvm-documentation.tex
+++ b/psvm-documentation.tex
@@ -81,10 +81,15 @@ As I dedicate this project to you, I want to express my deepest gratitude for yo
 
 This project is not just a culmination of my efforts but also a reflection of your endless love and support. Thank you for being my inspiration, my motivation, and my greatest cheerleaders. I am forever grateful for the love and guidance you've bestowed upon me.
 
-With all my love and appreciation,
+With all my love and appreciation.
 \clearpage
 
 \section{Acknowledgements}
+I am grateful to Multimedia University of Kenya for giving me a chance to pursue Bachelor of Science in Computer Science. I wish to thank
+my classmates and the CIT staff for having contributed in formulation of ideas and for
+providing a suitable working environment towards the completion of this proposed work. In
+particular, I would like to thank Ms Otukana Yvette for having contributed much towards the
+formulation of this project idea and the guidance till end of the project.
 \clearpage
 
 \section{Abstract}
@@ -783,7 +788,23 @@ It is the process of ensuring that the information system is operational, and th
     \item Evaluation of the system on regular intervals
 \end{enumerate}
 
+\chapter{Results and Conclusion}
+\section{Achievements}
+\begin{itemize}
+    \item Real-time Data Integration: Successfully integrating GPS devices to capture real-time location and speed data of public service vehicles (PSVs) is a significant achievement. This allows for accurate tracking and monitoring of vehicles.
+    \item Comprehensive Record Keeping: Building a system that records detailed information such as insurance policies, safety features, and inspection reports contributes to better safety management of PSVs. It ensures that all necessary data is accessible and organized.
+    \item User-Friendly Interface: Developing a user interface that is accessible to both passengers and law enforcement officers is crucial. Achieving a user-friendly design that allows passengers to easily access safety information by entering the vehicle registration number enhances user experience and promotes safety awareness.
+    \item Integration with External Parties: Successfully integrating data provided by various stakeholders such as drivers, conductors, vehicle owners, SACCOs, and the National Transport and Safety Authority (NTSA) demonstrates effective collaboration and data management within the transportation ecosystem.
+\end{itemize}
 
+\section{Lessons Learned}
+\begin{itemize}
+    \item Data Security: Ensuring the security and privacy of sensitive data, such as vehicle details and inspection reports, is paramount. Implementing robust security measures, including encryption and access controls, helps prevent unauthorized access and data breaches.
+    \item Scalability: As the system grows and more vehicles are added, scalability becomes a key consideration. Designing the system architecture with scalability in mind allows for smooth expansion without compromising performance.
+    \item User Training and Support: Providing adequate training and support for users, especially law enforcement officers who rely on the system for regulatory enforcement, is essential. Clear documentation and ongoing support help users effectively utilize the system and address any issues that may arise.
+    \item Feedback Mechanism: Establishing a feedback mechanism for passengers and other stakeholders can provide valuable insights for continuous improvement. Soliciting feedback on the usability and effectiveness of the system allows for iterative enhancements based on user needs and preferences.
+    \item Technology Stack Optimization: Continuously evaluating and optimizing the technology stack, including frameworks like ReactJS, Java, MariaDB, and Spring Boot, helps ensure optimal performance and efficiency of the system. Keeping abreast of advancements in technology allows for incorporating new tools and techniques to enhance system capabilities.
+\end{itemize}
 
 
 \end{document}
