--- a/psvm-documentation.tex
+++ b/psvm-documentation.tex
@@ -299,7 +299,7 @@ for developing PSVSM system.
 \section{Agile System Development Methodology}
 \noindent Most agile methods attempt to minimize risk by developing software in short time boxes called
 Iterations. Software development being essentially a human activity will always have variations
-in processes and inputs and the model should be flexible enough to handle the variations. The
+in processes and inputs and the model should be flexible enough to handle the variations \cite{schwaber2002}. The
 following are the characteristics of agile model that makes it suitable for PSVSM system development
 \begin{itemize}
 \item Iterative with short cycles enabling fast verifications and corrections.
@@ -322,7 +322,7 @@ improved. The figure bellow shows the flow of the methods
 \begin{figure}[h]
 \centering
   \includegraphics[width=0.5\textwidth]{/home/bram/Documents/psvm-v1/Scrum_Agile_events.png}
-  \caption{Agile model (Shwaber K ,2003)}
+  \caption{Agile model }
   \label{fig:agile model}
 \end{figure}
 
@@ -805,6 +805,9 @@ It is the process of ensuring that the information system is operational, and th
     \item Feedback Mechanism: Establishing a feedback mechanism for passengers and other stakeholders can provide valuable insights for continuous improvement. Soliciting feedback on the usability and effectiveness of the system allows for iterative enhancements based on user needs and preferences.
     \item Technology Stack Optimization: Continuously evaluating and optimizing the technology stack, including frameworks like ReactJS, Java, MariaDB, and Spring Boot, helps ensure optimal performance and efficiency of the system. Keeping abreast of advancements in technology allows for incorporating new tools and techniques to enhance system capabilities.
 \end{itemize}
+\chapter{Appendix}
+\bibliographystyle{plain}
+\bibliography{psvm}
 
 
 \end{document}
